# h2s-google-genai-apac-cohort1-final

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
sidekick/: __init__.py  _google_auth_patch.py  agent.py  db.py  flask_inventory_api.py  google_credentials.py  google_keep_tools.py  google_product_tools.py  inventory.py  mcp_config.py  resource_label.py  time_sanitize.py
static/: index.html  privacy-policy.html  terms-and-conditions.html
